--- a/pages/p6/932501.md
+++ b/pages/p6/932501.md
@@ -1,4 +1,4 @@
-### 习近平训话尴尬一幕 现场专家“假装记笔记”(组图)
+### 揭密：英军为何能在黑夜准确击落纳粹飞机？(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="央视画面显示，大多数时间都是专家们在听习近平的训话。(图片来源：视频截图)" src="https://img3.secretchina.com/pic/2020/9-12/p2774912a357952470-ss.jpg" style="height:337px; width:600px"/>
+  <img alt="英俊战士战斗机。" src="https://img3.secretchina.com/pic/2020/1-5/p2597831a839975789-ss.jpg"/>
   <br>
-   央视画面显示，大多数时间都是专家们在听习近平的训话。(图片来源：视频截图)
+   英俊战士战斗机。（图片来源：公有领域）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,69 +21,63 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/)  &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html) &nbsp;|&nbsp; [网门免翻墙](http://158.247.203.241:11000/show.aspx?name=ogHome)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  秦鹏快评：中共战狼大使涉黄被抓现行，遭国际嘲讽；官方辟谣恐惹无数麻烦，中共官员到底在想什么呢？](http://141.164.51.119:10000/videos/news/qp03.html)
-
-#### [ 🔥  前中共雞西市副市長李傳良公開對抗中共暴政聲明](http://141.164.51.119:10000/videos/news/../tui/index.html)
-
-#### [ 🔥  中共派系鬥爭是怎麼形成的｜「中共派系鬥爭」解讀](http://141.164.51.119:10000/videos/news/don02.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年9月12日讯】9月11日，
+  1940年10月开始，
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
-    习近平
+   <span href="https://www.secretchina.com/news/gb/tag/纳粹" target="_blank">
+    纳粹
    </span>
+   德军
   </strong>
-  主持召开了科学家
+  对
   <strong>
-   座谈会
+   英国
   </strong>
-  ，现场出现尴尬一幕。央视画面显示，现场有不少人象征性的拿着笔，面前放着一张空白纸，看到镜头扫过来，马上假装埋头记录；还有的人用眼睛瞟镜头，生怕被拍下大不敬的画面。
+  展开夜间轰炸，起初由于英军战机夜战能力有限，德军轰炸机几乎为所欲为。但渐渐地，德国
+  <strong>
+   飞行员
+  </strong>
+  发现日子越来越难过，英国飞行员似乎都长了一双“猫眼”，能在黑夜里准确发现并击落德机，这到底是为什么呢？
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  据中共党媒报导，9月11日下午，
-  <span href="https://zh.wikipedia.org/zh-hans/%E4%B9%A0%E8%BF%91%E5%B9%B3" target="_blank">
-   习近平
-  </span>
-  在京主持召开科学家座谈会并发表重要讲话，就“十四五”时期中国科技事业发展听取意见。
+  <strong>
+   胡萝卜“造就”空中英雄？
+  </strong>
  </p>
  <p>
-  中共政治局常委、中央书记处书记王沪宁，中共中央政治局常委、国务院副总理韩正，以及中共政治局委员丁薛祥、刘鹤、孙春兰、陈希、黄坤明、万钢、何立峰均出席
-  <span href="https://www.secretchina.com/news/gb/tag/座谈会" target="_blank">
-   座谈会
+  对于这个问题，不光德军想知道答案，英国老百姓也想知道。于是，负责食物供给的英国官员站出来，宣称皇家
+  <span href="https://www.secretchina.com/news/gb/tag/空军" target="_blank">
+   空军
   </span>
-  。
- </p>
- <p style="text-align: center;">
-  <img alt="" src="https://img3.secretchina.com/pic/2020/9-12/p2774911a610000187-ss.jpg"/>
-  <br>
-   央视画面显示，不少人面前的白纸始终是空的。(视频截图)
-  </br>
+  飞行员吃了大量胡萝卜，正是其中的维生素使得他们的视力变得异常锐利。
  </p>
  <p>
-  央视画面显示，大多数时间都是
-  <span href="https://www.secretchina.com/news/gb/tag/专家" target="_blank">
-   专家
+  吃胡萝卜能当英雄，还有什么比这套说辞能让英国人停止抱怨肉食不够，转而心甘情愿地大嚼胡萝卜呢！一时间，伦敦街头巷尾，大家都在谈论胡萝卜的“丰功伟绩”。德国人虽然半信半疑，但也不得不接受这一解释。德国科学家认为，胡萝卜中含有大量有利于视力的维生素，英国
+  <span href="https://www.secretchina.com/news/gb/tag/飞行员" target="_blank">
+   飞行员
   </span>
-  们在听习近平的训话。这些人大多数至少算半个政客。有些人很懂行，自己拿出笔记本，表现出很认真做记录的样子。镜头里也有不少人象征性的拿着笔，面前放着一张空白纸，似乎也想记录，但应该确实没什么好记的，手一直端著，却没有落笔，一张白纸仍然是空空的。
+  视力大增，很可能与他们的食物有关。
  </p>
  <p>
-  有人看到央视的镜头扫过来，马上假装开始埋头记录，还有的人用眼睛瞟镜头，生怕被拍下“大不敬”的画面。
+  战后，英军夜战王牌飞行员约翰･坎宁汉姆提及此事，不禁大笑起来：“截至1941年5月，我已在夜间击落12架德机，因为我的飞机上装备了极为秘密的仪器，能在夜间帮助我准确锁定德机，就像我长了一双‘猫眼’。而英国空军部为了掩饰该仪器的存在，故意编了个故事，说我们是常吃胡萝卜才厉害起来。”
+ </p>
+ <p>
+  坎宁汉姆提到的秘密仪器就是AI机载雷达，当时
+  <span href="https://www.secretchina.com/news/gb/tag/德军" target="_blank">
+   德军
+  </span>
+  只知道英军有地面预警雷达，但对AI机载雷达一无所知。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -98,26 +92,11 @@
   </div>
  </center>
  <p>
-  习近平在会上强调两个“更加”，现在“比过去任何时候都更加需要科学技术解决方案，都更加需要增强创新”，希望“负起历史责任”。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  对此时事评论员钟原表示，中共间谍偷窃技术的时代眼看结束了，确实更需要这些本土的专家了，但这些人真能担当“历史责任”吗？答案是显而易见的，
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
+  档案显示，早在1937年，英国就研制出世界上第一部
+  <span href="https://www.secretchina.com/news/gb/tag/机载雷达" target="_blank">
+   机载雷达
   </span>
-  的科技发展又将回到几十年前的状态，无疑再次被拉开与世界的距离。假如本土专家真能胜任的话，也就不需要派出那么多间谍去美国偷窃了。现在不只是美国，各西方主要科技强国，都会严防中共间谍。
+  ，科学家鲍恩博士领导的小组将一部小雷达安装到“安森”侦察机上，可探测到16千米外的船舶，后经改进增添了探测飞机的功能，被正式命名为“AI”。但装备了AI雷达的“安森”飞机太过落后，即便有雷达帮助，也很难与德国夜袭飞机抗衡。为了应急，英国皇家空军借用“美丽堡垒”轰炸机的机翼和后机身，研制出装备AI雷达的双发双座重型战斗机，命名为“英俊战士”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -132,7 +111,9 @@
   </div>
  </center>
  <p>
-  钟原说，参加会议的人心里应该都很清楚，国际社会正在隔绝中共政权，这些专家和他们的下属们再想去美欧国家抄袭的路被堵死了，甚至获得国外资料也难上加难了。这一切都是谁一手造成的呢？正是给他们训话的中共高层的一系列错判和决策失误，才导致了今天的窘境。
+  <strong>
+   德军恐惧的“寂静死神”
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -147,7 +128,37 @@
   </div>
  </center>
  <p>
-  在他看来，中共现在面对被国际孤立，中共高层不但要掩盖错误的责任，也不想做任何改变，竟然还高调搬出了闭关锁国的对策，妄图保住中共政权。难怪参加会议的一些人想假装记录，也实在无法落笔。
+  “英俊战士”名为“英俊”，但样子短粗臃肿，根本算不上英俊。坎宁汉姆说：“该机样子虽丑，威力却很大，时速可达515千米，加上自带的4门20毫米航炮和6挺航空机枪，火力超过当时任何一款战斗机。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  从1940年9月开始，100架“英俊战士”战斗机装备了英军4个夜战中队。它能在AI雷达引导下悄悄接近目标，然后4门航炮同时开火，只需一个短点射就能将德国轰炸机打得凌空爆炸。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  “英俊战士”另一个可怕之处是发动机声音小，德军往往刚听到声音就已经进入它的射程，很快被击落了，所以德国人把“英俊战士”叫作“寂静死神”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -166,11 +177,9 @@
   </ins>
  </center>
  <p>
-  在此之前，习近平在台上发表万字讲稿，也曾出现尴尬一幕。北京8日举办的“全国抗击
-  <span href="https://www.secretchina.com/news/gb/tag/武汉肺炎" target="_blank">
-   武汉肺炎
-  </span>
-  （中共病毒）疫情表彰大会”上，习发表1万多字的讲稿，习提到武汉当地的疫情状况时，突然冒出一句：“全国人民都为热干面加油！”
+  <strong>
+   成功的关键是团队合作
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -185,7 +194,7 @@
   </div>
  </center>
  <p>
-  现场影片可见，习近平语毕后静默了几秒钟，似乎等台下鼓掌，但台下官员们仿佛不确定有没有听错，没人敢鼓掌。习发现台下的官员们没反应，抬头向众官员扫了一眼，台下拍手部队发现不对劲，立刻鼓掌，这时掌声才开始逐渐变大。
+  具体到坎宁汉姆本人，他在夜战中击落20架德机，他驾驶的“英俊战士”飞机身上贴满了表示击落德机数量的“铁十字”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -200,7 +209,22 @@
   </div>
  </center>
  <p>
-  据了解，习近平所说的“热干面”是武汉当地知名小吃，想以“热干面”代表武汉，但外界推测是因为这句话来得太突然，前言不对后语，才令官员们反应不及。
+  1940年11月19日，坎宁汉姆驾机拦截袭击伯明翰的德国机群，将一架Ju－88轰炸机击落，首开AI雷达引导攻击成功的记录。次年4月，坎宁汉姆的夜战生涯迎来胜利的高峰，他在一个夜晚就击落3架德机。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  二战结束后，有人问他如何成为夜战王牌，坎宁汉姆笑了笑：“很简单，观察员只要紧盯十字线上的绿点就行了，不需要吃很多胡萝卜。”然后，他又严肃地说：“其实，我们成功的关键是团队合作，夜战就像一座金字塔，两个人驾驶‘英俊战士’飞在高空，下面是地面引导雷达、探照灯和控制站，身处其中的每个人都要做好自己的工作，这样才能环环相扣。否则，多先进的飞机也是浪费！”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -232,7 +256,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -264,13 +288,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/945928.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/945928.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/945928.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/12/945928.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/932501.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/932501.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/932501.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/08/932501.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p2/945928.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p6/932501.md' width='0px' height='0px'/>
