--- a/pages/p6/932501.md
+++ b/pages/p6/932501.md
@@ -1,4 +1,4 @@
-### 全球大围剿 阴干中共国(图)
+### 揭密：英军为何能在黑夜准确击落纳粹飞机？(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img src="https://img3.secretchina.com/pic/2020/10-6/p2790292a424741465-ss.jpg"/>
+  <img alt="英俊战士战斗机。" src="https://img3.secretchina.com/pic/2020/1-5/p2597831a839975789-ss.jpg"/>
   <br>
-   2020年10月6日，四方会谈在东京举行，美国国务卿蓬佩奥、日本外交大臣茂木敏充、印度外长苏杰生、澳大利亚外交大臣佩恩到达开会现场。（图片来源：KIYOSHI OTA/POOL/AFP via Getty Images）
+   英俊战士战斗机。（图片来源：公有领域）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,109 +21,63 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
-  </span>
-  2020年10月8日讯】最近美国皮尤研究中心做了一个大规模的民调，涉及十四个国家近一万五千人，调查主题集中在各国人民对中共的负面印象，结果足让中共闻之胆寒。
+  1940年10月开始，
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/纳粹" target="_blank">
+    纳粹
+   </span>
+   德军
+  </strong>
+  对
+  <strong>
+   英国
+  </strong>
+  展开夜间轰炸，起初由于英军战机夜战能力有限，德军轰炸机几乎为所欲为。但渐渐地，德国
+  <strong>
+   飞行员
+  </strong>
+  发现日子越来越难过，英国飞行员似乎都长了一双“猫眼”，能在黑夜里准确发现并击落德机，这到底是为什么呢？
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  按对中共负面印象排名，日本86%，瑞典85%，澳洲81%，丹麦75%，韩国75%，英国74%，美国73%，加拿大73%，荷兰73%，德国71%，比利时71%，法国70%，西班牙63%，意大利62%。
+  <strong>
+   胡萝卜“造就”空中英雄？
+  </strong>
  </p>
  <p>
-  以上数字有几点值得注意：一是十四个国家都是当今世界上最先进最富有的民主国家；二是对中共的负面印象全部超过百分之六十；三是亚洲的日本居然排名第一，韩国排名第五。
- </p>
- <p>
-  中共遭人白眼，主要当然是独裁体制不得人心。这十四个国家都是历史悠久的民主国家，人民的民主思想根深蒂固，他们不会容忍中共对内迫害中国人，实行宗教和文化灭绝，对外与其他独裁国家连成一气，充当领头羊，企图左右世界潮流。
- </p>
- <p>
-  此外，民主国家的人民，最注重的是国与国之间的平等互利，不是腰间有一点钱就声大夹恶，四处霸凌，中共的恶狼外交更惹人反感。
- </p>
- <p>
-  最后，这次武汉疫症给全世界带来巨大灾难，中共非但不反省，更卸膊甩锅，把英美两国的政府首脑都害惨了。现在病毒来源未搞清楚，各国索偿呼声高唱入云，这个苦果，早晚中共还要吞下去。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  综上所述，中共作恶多端，被爱好和平和正义的各国人民齐声谴责，这是罪有应得。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  看到这些数字，便明白中共为什么要实行
-  <span href="https://www.secretchina.com/news/gb/tag/内循环" target="_blank">
-   内循环
+  对于这个问题，不光德军想知道答案，英国老百姓也想知道。于是，负责食物供给的英国官员站出来，宣称皇家
+  <span href="https://www.secretchina.com/news/gb/tag/空军" target="_blank">
+   空军
   </span>
-  了，外部环境如此恶劣，几乎全世界最先进的民主国家都看你不顺眼，你又如何开展外贸？民主国家的民意，就是国家大政方针的总方向，没有一个政府敢于违背人民的意志。在人民讨厌中共的集体意志之下，任何政府敢与中共眉来眼去，都会被自己国内的人民推翻。这就德法等欧洲国家近来要向中共摆脸色的根本原因。
+  飞行员吃了大量胡萝卜，正是其中的维生素使得他们的视力变得异常锐利。
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
  <p>
-  自去年以来，美国先与中共翻脸，
-  <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
-   习近平
+  吃胡萝卜能当英雄，还有什么比这套说辞能让英国人停止抱怨肉食不够，转而心甘情愿地大嚼胡萝卜呢！一时间，伦敦街头巷尾，大家都在谈论胡萝卜的“丰功伟绩”。德国人虽然半信半疑，但也不得不接受这一解释。德国科学家认为，胡萝卜中含有大量有利于视力的维生素，英国
+  <span href="https://www.secretchina.com/news/gb/tag/飞行员" target="_blank">
+   飞行员
   </span>
-  还不知死活，继续在国际外交场合横行，如此佮恰给美国政府，给蓬佩奥们提供了一个绝佳的机会，让他们在极短时间内说服几乎所有西方国家。就在几个月之内，先是日本澳洲和印度，继而是英国加拿大瑞典丹麦，近来连德法等欧洲强国也态度大变。
+  视力大增，很可能与他们的食物有关。
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
  <p>
-  <span href="https://www.secretchina.com/news/gb/tag/蓬佩奥" target="_blank">
-   蓬佩奥
+  战后，英军夜战王牌飞行员约翰･坎宁汉姆提及此事，不禁大笑起来：“截至1941年5月，我已在夜间击落12架德机，因为我的飞机上装备了极为秘密的仪器，能在夜间帮助我准确锁定德机，就像我长了一双‘猫眼’。而英国空军部为了掩饰该仪器的存在，故意编了个故事，说我们是常吃胡萝卜才厉害起来。”
+ </p>
+ <p>
+  坎宁汉姆提到的秘密仪器就是AI机载雷达，当时
+  <span href="https://www.secretchina.com/news/gb/tag/德军" target="_blank">
+   德军
   </span>
-  此次到日本，与日本、澳洲、印度策划成立亚洲“小北约”，这四国只是发起国家而已，事成之后，亚洲其他国家如韩国、越南、泰国、印尼、菲律宾等，也势必要加入以保障自身的安全。如此，中共只剩下一个穷得叮当响要靠救济过日的朝鲜来往，一对难兄难弟，互相取暖。
+  只知道英军有地面预警雷达，但对AI机载雷达一无所知。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -138,7 +92,11 @@
   </div>
  </center>
  <p>
-  现在可以看清楚了，美国的对华政策，是要联合世界各国，形成一个巨大的包围网，把中共包抄在自己国土之内，让他自己慢慢阴干。
+  档案显示，早在1937年，英国就研制出世界上第一部
+  <span href="https://www.secretchina.com/news/gb/tag/机载雷达" target="_blank">
+   机载雷达
+  </span>
+  ，科学家鲍恩博士领导的小组将一部小雷达安装到“安森”侦察机上，可探测到16千米外的船舶，后经改进增添了探测飞机的功能，被正式命名为“AI”。但装备了AI雷达的“安森”飞机太过落后，即便有雷达帮助，也很难与德国夜袭飞机抗衡。为了应急，英国皇家空军借用“美丽堡垒”轰炸机的机翼和后机身，研制出装备AI雷达的双发双座重型战斗机，命名为“英俊战士”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -153,7 +111,54 @@
   </div>
  </center>
  <p>
-  这样做的好处是不必动武，但中共对外的联络几乎中断，经济上外贸死火，科技上来源涸竭，外交上举目无亲，这样不须多长时间，外部的包围圈形成，就让中共自己去面对内部的诸多难题。中共内部社会矛盾丛生，楼巿股巿高铁都有财政危机，基层政府就快成无米之炊，就业形势恶劣，大量退休人员财政负担势将掏空国库，如此等等，定时炸弹随时爆破。
+  <strong>
+   德军恐惧的“寂静死神”
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  “英俊战士”名为“英俊”，但样子短粗臃肿，根本算不上英俊。坎宁汉姆说：“该机样子虽丑，威力却很大，时速可达515千米，加上自带的4门20毫米航炮和6挺航空机枪，火力超过当时任何一款战斗机。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  从1940年9月开始，100架“英俊战士”战斗机装备了英军4个夜战中队。它能在AI雷达引导下悄悄接近目标，然后4门航炮同时开火，只需一个短点射就能将德国轰炸机打得凌空爆炸。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  “英俊战士”另一个可怕之处是发动机声音小，德军往往刚听到声音就已经进入它的射程，很快被击落了，所以德国人把“英俊战士”叫作“寂静死神”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -172,7 +177,9 @@
   </ins>
  </center>
  <p>
-  美国已将军事力量重点放在亚洲，英国、澳洲、加拿大的舰队都已经或即将在南海游弋，美国又大量向台湾、日本、韩国和印度提供新式武器，这样的态势，逼使中共在军事上不敢轻举妄动，只能眼睁睁看着自己在南海和台海都裹足。打又不敢打，和又和不得，中共的日子会越来越难过，直至内部出大问题，自我瓦解。
+  <strong>
+   成功的关键是团队合作
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -187,7 +194,7 @@
   </div>
  </center>
  <p>
-  因为国安法和武汉疫症的双重打击，香港人的反共抗争目前处于低潮，我们大可不必太悲观，只要看看世界上最强大的十四个民主国家都和我们站在一起，我们就更可以对未来充满信心。
+  具体到坎宁汉姆本人，他在夜战中击落20架德机，他驾驶的“英俊战士”飞机身上贴满了表示击落德机数量的“铁十字”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -202,7 +209,7 @@
   </div>
  </center>
  <p>
-  单靠香港人，当然不可能战胜中共，香港人与世界各国人民站在一起，成为反共阵营的一员，有这样的力量，没有什么不能战胜的，只是时间和形式的问题。
+  1940年11月19日，坎宁汉姆驾机拦截袭击伯明翰的德国机群，将一架Ju－88轰炸机击落，首开AI雷达引导攻击成功的记录。次年4月，坎宁汉姆的夜战生涯迎来胜利的高峰，他在一个夜晚就击落3架德机。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -217,7 +224,7 @@
   </div>
  </center>
  <p>
-  世局变化有快有慢，有大有小，慢是为快做准备，小是为大作积累，今年以来，世局变化之大之快，都令我们难以料想，世界剿共之局已成，离总清算不远了。
+  二战结束后，有人问他如何成为夜战王牌，坎宁汉姆笑了笑：“很简单，观察员只要紧盯十字线上的绿点就行了，不需要吃很多胡萝卜。”然后，他又严肃地说：“其实，我们成功的关键是团队合作，夜战就像一座金字塔，两个人驾驶‘英俊战士’飞在高空，下面是地面引导雷达、探照灯和控制站，身处其中的每个人都要做好自己的工作，这样才能环环相扣。否则，多先进的飞机也是浪费！”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -231,26 +238,6 @@
    </center>
   </div>
  </center>
- <p>
-  （文章授权转载自香港中文大学
-  <span href="https://www.facebook.com/nganshunkau" target="_blank">
-   facebook颜纯钩作者专页
-  </span>
-  ）
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- (文章仅代表作者个人立场和观点)
  <p style="margin-bottom:12px;">
   <hr style="border-top: 1px dashed  ;" width="100%"/>
   <br/>
@@ -269,7 +256,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -301,13 +288,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/948531.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/948531.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/948531.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/08/948531.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/932501.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/932501.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/932501.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/08/932501.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p4/948531.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p6/932501.md' width='0px' height='0px'/>
