同步于: 12月9日20时52分

--- a/pages/p6/932501.md
+++ b/pages/p6/932501.md
@@ -1,4 +1,4 @@
-### 做人别丢良心 &nbsp;做事别伤人心(图)
+### 揭密：英军为何能在黑夜准确击落纳粹飞机？(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,24 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="愿你用一生温暖、纯良，善待你身边每一个对你付出真心的人。" src="https://img3.secretchina.com/pic/2020/8-5/p2747312a230318727-ss.jpg" style="height:337px; width:600px"/>
+  <img alt="英俊战士战斗机。" src="https://img3.secretchina.com/pic/2020/1-5/p2597831a839975789-ss.jpg"/>
   <br>
-   <strong>
-    做人
-   </strong>
-   别丢
-   <strong>
-    良心
-   </strong>
-   ，
-   <strong>
-    做事
-   </strong>
-   别伤
-   <strong>
-    人心
-   </strong>
-   。（图片来源：Adobe stock)
+   英俊战士战斗机。（图片来源：公有领域）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -36,71 +21,63 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/) &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  【九評之二】評中國共產黨是怎樣起家的](http://141.164.51.119:10000/videos/news/../res/jiuping/index.html)
-
-#### [ 🔥  走出文化亡国第八集 - 中共通过这个几个“阴招”让国人不断“遗忘历史”  ](http://141.164.51.119:10000/videos/news/../res/zcwhwg/index.html)
-
-#### [ 🔥  北戴河会议是否会成为习近平的一个坎儿;政变成功的模式可能是这样的;从2015年的未遂政变说起](http://141.164.51.119:10000/videos/news/ztl01.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  良心，是
-  <span href="https://www.secretchina.com/news/gb/tag/做人" target="_blank">
-   做人
-  </span>
-  做事的基本底线。愿你能坚守本心，一生温暖纯良，善待你身边每一个对你付出真心的人。
+  1940年10月开始，
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/纳粹" target="_blank">
+    纳粹
+   </span>
+   德军
+  </strong>
+  对
+  <strong>
+   英国
+  </strong>
+  展开夜间轰炸，起初由于英军战机夜战能力有限，德军轰炸机几乎为所欲为。但渐渐地，德国
+  <strong>
+   飞行员
+  </strong>
+  发现日子越来越难过，英国飞行员似乎都长了一双“猫眼”，能在黑夜里准确发现并击落德机，这到底是为什么呢？
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  【01】
+  <strong>
+   胡萝卜“造就”空中英雄？
+  </strong>
  </p>
  <p>
-  小王有段时间，经常和同事小赵一起去公司楼下的早餐店买早餐。一次小王无意间发现，小赵买完早餐后并没有扫码付钱。小王以为她忘了，就忍不住提醒，谁知小赵赶紧拉着小王的胳膊往外走，还说：“你傻呀，早餐店现在人这么多，就算你扫了码没付钱，老板也不会发现的。”
- </p>
- <p>
-  原来，这并不是小赵在早餐店里第一次逃单。回公司的路上，她还“沾沾自喜”地向小王传授“逃单经验”。看着她仿佛占了天大便宜的样子，小王内心最真实的想法是：你这么做
-  <span href="https://www.secretchina.com/news/gb/tag/良心" target="_blank">
-   良心
+  对于这个问题，不光德军想知道答案，英国老百姓也想知道。于是，负责食物供给的英国官员站出来，宣称皇家
+  <span href="https://www.secretchina.com/news/gb/tag/空军" target="_blank">
+   空军
   </span>
-  不会痛吗？为了贪一点小便宜就枉顾自己的良心，这样的人我不敢继续和她做朋友。
+  飞行员吃了大量胡萝卜，正是其中的维生素使得他们的视力变得异常锐利。
  </p>
  <p>
-  良心，是做人
-  <span href="https://www.secretchina.com/news/gb/tag/做事" target="_blank">
-   做事
+  吃胡萝卜能当英雄，还有什么比这套说辞能让英国人停止抱怨肉食不够，转而心甘情愿地大嚼胡萝卜呢！一时间，伦敦街头巷尾，大家都在谈论胡萝卜的“丰功伟绩”。德国人虽然半信半疑，但也不得不接受这一解释。德国科学家认为，胡萝卜中含有大量有利于视力的维生素，英国
+  <span href="https://www.secretchina.com/news/gb/tag/飞行员" target="_blank">
+   飞行员
   </span>
-  的基本底线，也是人品的体现。
+  视力大增，很可能与他们的食物有关。
  </p>
  <p>
-  【02】
+  战后，英军夜战王牌飞行员约翰･坎宁汉姆提及此事，不禁大笑起来：“截至1941年5月，我已在夜间击落12架德机，因为我的飞机上装备了极为秘密的仪器，能在夜间帮助我准确锁定德机，就像我长了一双‘猫眼’。而英国空军部为了掩饰该仪器的存在，故意编了个故事，说我们是常吃胡萝卜才厉害起来。”
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
  <p>
-  小米和交往了4年的男友分手了。其实，小米是个很专情且对感情负责任的女孩。当初，正是在她的主动追求下，两人才走到了一起。后来两人相处中遇到了矛盾，也总是小米主动妥协退让。
+  坎宁汉姆提到的秘密仪器就是AI机载雷达，当时
+  <span href="https://www.secretchina.com/news/gb/tag/德军" target="_blank">
+   德军
+  </span>
+  只知道英军有地面预警雷达，但对AI机载雷达一无所知。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -115,7 +92,11 @@
   </div>
  </center>
  <p>
-  异地恋期间，小米经常会坐一天一夜的火车，就为了去见男友一面；男友吃不惯外卖，小米就专门去报了厨艺班；男友的妈妈生病住院，小米主动去医院照顾，日夜不休，而男友却在和朋友们喝酒，夜不归宿……
+  档案显示，早在1937年，英国就研制出世界上第一部
+  <span href="https://www.secretchina.com/news/gb/tag/机载雷达" target="_blank">
+   机载雷达
+  </span>
+  ，科学家鲍恩博士领导的小组将一部小雷达安装到“安森”侦察机上，可探测到16千米外的船舶，后经改进增添了探测飞机的功能，被正式命名为“AI”。但装备了AI雷达的“安森”飞机太过落后，即便有雷达帮助，也很难与德国夜袭飞机抗衡。为了应急，英国皇家空军借用“美丽堡垒”轰炸机的机翼和后机身，研制出装备AI雷达的双发双座重型战斗机，命名为“英俊战士”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -130,7 +111,9 @@
   </div>
  </center>
  <p>
-  后来，两人发生了一次争吵。小米提到自己一次次的妥协和付出，男友却说：“这都是你自找的，当初要不是你自己主动，我会看上你？”这句话在小米心中狠狠地撕开了一道口子。小米说：“我可以为了爱你付出一切，但是我不能不要自己的尊严。”然后，便头也不回地提了分手。
+  <strong>
+   德军恐惧的“寂静死神”
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -145,7 +128,7 @@
   </div>
  </center>
  <p>
-  树怕伤根，人怕伤心。有时候，让一颗炙热的心凉下来，只需要一句话。
+  “英俊战士”名为“英俊”，但样子短粗臃肿，根本算不上英俊。坎宁汉姆说：“该机样子虽丑，威力却很大，时速可达515千米，加上自带的4门20毫米航炮和6挺航空机枪，火力超过当时任何一款战斗机。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -160,7 +143,22 @@
   </div>
  </center>
  <p>
-  【03】
+  从1940年9月开始，100架“英俊战士”战斗机装备了英军4个夜战中队。它能在AI雷达引导下悄悄接近目标，然后4门航炮同时开火，只需一个短点射就能将德国轰炸机打得凌空爆炸。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  “英俊战士”另一个可怕之处是发动机声音小，德军往往刚听到声音就已经进入它的射程，很快被击落了，所以德国人把“英俊战士”叫作“寂静死神”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -179,7 +177,9 @@
   </ins>
  </center>
  <p>
-  有一部电视剧，剧中的龚先生由于企业资金周转困难，不得已要变卖祖宅老洋房救急。本来房子可以很顺利地卖出，谁知半路杀出了一个太表姑奶奶，带着一家人赖在老洋房旁边的平房里不走，并提出要巨额搬家费。
+  <strong>
+   成功的关键是团队合作
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -194,7 +194,7 @@
   </div>
  </center>
  <p>
-  原来，这位太表姑奶奶早年丧夫后，带着两个年幼的孩子来投奔龚家。龚家好心收留了她，并在老洋房旁边给一家人搭建了一间小平房，让他们免费居住，还供两个孩子读书。谁知在龚家最困难的时候，太表姑奶奶一家不仅不伸出援手，反而趁火打劫，为一间本就不属于自己的平房，向龚家索要巨额搬家费。
+  具体到坎宁汉姆本人，他在夜战中击落20架德机，他驾驶的“英俊战士”飞机身上贴满了表示击落德机数量的“铁十字”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -209,7 +209,7 @@
   </div>
  </center>
  <p>
-  这种不顾自己的良心，也不顾别人多年来真心相助的行为，简直就是现实版的农夫与蛇。
+  1940年11月19日，坎宁汉姆驾机拦截袭击伯明翰的德国机群，将一架Ju－88轰炸机击落，首开AI雷达引导攻击成功的记录。次年4月，坎宁汉姆的夜战生涯迎来胜利的高峰，他在一个夜晚就击落3架德机。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -224,7 +224,7 @@
   </div>
  </center>
  <p>
-  能被你伤到的人，都是在乎你的人。余生，请善待你身边每一个对你付出真心的人。愿你能坚守本心，一生温暖纯良，也愿你所有的真心都能被温柔对待。
+  二战结束后，有人问他如何成为夜战王牌，坎宁汉姆笑了笑：“很简单，观察员只要紧盯十字线上的绿点就行了，不需要吃很多胡萝卜。”然后，他又严肃地说：“其实，我们成功的关键是团队合作，夜战就像一座金字塔，两个人驾驶‘英俊战士’飞在高空，下面是地面引导雷达、探照灯和控制站，身处其中的每个人都要做好自己的工作，这样才能环环相扣。否则，多先进的飞机也是浪费！”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -256,7 +256,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -288,13 +288,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/941902.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/941902.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/941902.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/08/07/941902.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/932501.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/932501.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/932501.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/08/932501.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p8/941902.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p6/932501.md' width='0px' height='0px'/>
