同步于: 12月9日21时52分

--- a/pages/p6/932501.md
+++ b/pages/p6/932501.md
@@ -1,4 +1,4 @@
-### 数字人民币将大规模落地推进……(图)
+### 揭密：英军为何能在黑夜准确击落纳粹飞机？(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,76 +6,78 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p>
-  【看中国2020年10月14日讯】之前提到过，中国为了防止外汇遭到挤兑，
-  <span href="https://www.secretchina.com/news/gb/tag/数字货币" target="_blank">
-   数字货币
-  </span>
-  是必要的防火墙，因为数字货币不能换黄金，也不能换美元，而且卖房还可能只能收数字货币，连人民币都得不到。所以，只要数字货币推行成功，成功替代流通中的纸币，那么外汇、楼市泡沫都不算事。
-  <span id="hideid" name="hideid" style="color:red;display:none;">
-   <span href="https://www.secretchina.com">
+ <p style="text-align:center">
+  <img alt="英俊战士战斗机。" src="https://img3.secretchina.com/pic/2020/1-5/p2597831a839975789-ss.jpg"/>
+  <br>
+   英俊战士战斗机。（图片来源：公有领域）
+   <span id="hideid" name="hideid" style="color:red;display:none;">
+    <span href="https://www.secretchina.com">
+    </span>
    </span>
-  </span>
+  </br>
  </p>
  <div id="txt-mid1-t21-2017">
   
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  最近，就有数字货币的一个大消息。久闻楼梯响，终见“人下来”。数字货币真的大规模落地了！
+  1940年10月开始，
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/纳粹" target="_blank">
+    纳粹
+   </span>
+   德军
+  </strong>
+  对
+  <strong>
+   英国
+  </strong>
+  展开夜间轰炸，起初由于英军战机夜战能力有限，德军轰炸机几乎为所欲为。但渐渐地，德国
+  <strong>
+   飞行员
+  </strong>
+  发现日子越来越难过，英国飞行员似乎都长了一双“猫眼”，能在黑夜里准确发现并击落德机，这到底是为什么呢？
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  这一次，它选择以千万红包的形式进行普及。10月8日，深圳市政务服务数据管理局公布，“2020礼享罗湖”系列促
-  <span href="https://www.secretchina.com/news/gb/tag/消费" target="_blank">
-   消费
+  <strong>
+   胡萝卜“造就”空中英雄？
+  </strong>
+ </p>
+ <p>
+  对于这个问题，不光德军想知道答案，英国老百姓也想知道。于是，负责食物供给的英国官员站出来，宣称皇家
+  <span href="https://www.secretchina.com/news/gb/tag/空军" target="_blank">
+   空军
   </span>
-  活动预约开启，此次活动面向在深个人发放1000万元数字人民币红包，每个红包金额为200元，红包数量共计5万个。
+  飞行员吃了大量胡萝卜，正是其中的维生素使得他们的视力变得异常锐利。
  </p>
  <p>
-  消费礼券并不陌生，疫情以来，全国多地都发放了消费券。但是，明显消费券只是辅助，不能独立使用，你必须先消费才会附带赠送。这次深圳罗湖发的是数字人民币红包，这次活动是为了推进粤港澳大湾区建设，结合本地促消费政策，深圳市人民政府近期联合人民银行开展了数字人民币红包试点，是数字人民币研发过程中的一次常规性测试。
- </p>
- <p style="text-align: center;">
-  <img alt="" src="https://img3.secretchina.com/pic/2020/8-18/p2756881a720602051-ss.jpg" style="height:336px; width:600px"/>
-  <br>
-   数字货币在中国真的要大规模落地了……（网络图片）
-  </br>
- </p>
- <p>
-  本次试点由深圳市罗湖区出资，所有在深个人，使用
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
+  吃胡萝卜能当英雄，还有什么比这套说辞能让英国人停止抱怨肉食不够，转而心甘情愿地大嚼胡萝卜呢！一时间，伦敦街头巷尾，大家都在谈论胡萝卜的“丰功伟绩”。德国人虽然半信半疑，但也不得不接受这一解释。德国科学家认为，胡萝卜中含有大量有利于视力的维生素，英国
+  <span href="https://www.secretchina.com/news/gb/tag/飞行员" target="_blank">
+   飞行员
   </span>
-  大陆手机号和第二代居民身份证即可参与预约登记，然后通过抽签方式将200元资金以数字人民币红包的方式发放至5万个在深个人数字人民币钱包。
+  视力大增，很可能与他们的食物有关。
  </p>
  <p>
-  本次活动通过“摇号抽签”形式发放，抽签报名通道自2020年10月9日0时正式开启。在深个人可通过“i深圳”活动申请抽签，中签后根据中签短信指引下载“数字人民币App”，开通“个人数字钱包“后，即可领取“礼享罗湖数字人民币红包”。
+  战后，英军夜战王牌飞行员约翰･坎宁汉姆提及此事，不禁大笑起来：“截至1941年5月，我已在夜间击落12架德机，因为我的飞机上装备了极为秘密的仪器，能在夜间帮助我准确锁定德机，就像我长了一双‘猫眼’。而英国空军部为了掩饰该仪器的存在，故意编了个故事，说我们是常吃胡萝卜才厉害起来。”
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
  <p>
-  该红包可于10月12日18时至10月18日24时在罗湖区辖内已完成数字人民币系统改造的3389家商户无门槛消费，包括罗湖万象城、乐凯撒、天虹百货、茂业百货等商家，具体商户名单可至“i深圳”预约平台查阅。可以看出目前数字货币的零售终端在深圳基本已经完成。万事俱备只欠东风。
+  坎宁汉姆提到的秘密仪器就是AI机载雷达，当时
+  <span href="https://www.secretchina.com/news/gb/tag/德军" target="_blank">
+   德军
+  </span>
+  只知道英军有地面预警雷达，但对AI机载雷达一无所知。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -90,7 +92,11 @@
   </div>
  </center>
  <p>
-  中签人员将于10月12日18起收到中签短信，然后根据中签短信指引，下载安装“数字人民币App”，注册登录并开立预约时所选银行的“个人数字钱包”后，即可领取“礼享罗湖数字人民币红包”200元。
+  档案显示，早在1937年，英国就研制出世界上第一部
+  <span href="https://www.secretchina.com/news/gb/tag/机载雷达" target="_blank">
+   机载雷达
+  </span>
+  ，科学家鲍恩博士领导的小组将一部小雷达安装到“安森”侦察机上，可探测到16千米外的船舶，后经改进增添了探测飞机的功能，被正式命名为“AI”。但装备了AI雷达的“安森”飞机太过落后，即便有雷达帮助，也很难与德国夜袭飞机抗衡。为了应急，英国皇家空军借用“美丽堡垒”轰炸机的机翼和后机身，研制出装备AI雷达的双发双座重型战斗机，命名为“英俊战士”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -105,7 +111,9 @@
   </div>
  </center>
  <p>
-  这些数字红包是真金白银，可以直接单独买东西的。这对于平时发几个鸡蛋都要通宵排队的大陆民众来说，当然是趋之若鹜。等数字货币钱包在应用商店正式推出后，政府再搞一轮正式的红包雨，估计之前无人问津的数字货币钱包，可能一夜之间就在深圳市民的手机里装起来了，普及效果当然是不用说的。只要你是适应了这样的水温就好，青蛙总是会煮熟的。所以大家也不用担心数字货币钱包没有人用，只要到时政府再搞个数字货币钱包抽奖活动，就算每个红包20元，深圳1300万常住人口也会一夜之间安装上数字钱包。
+  <strong>
+   德军恐惧的“寂静死神”
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -120,7 +128,37 @@
   </div>
  </center>
  <p>
-  然后把这个经验在全国推广，这些大中小城市的数字货币都会很快普及上来。
+  “英俊战士”名为“英俊”，但样子短粗臃肿，根本算不上英俊。坎宁汉姆说：“该机样子虽丑，威力却很大，时速可达515千米，加上自带的4门20毫米航炮和6挺航空机枪，火力超过当时任何一款战斗机。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  从1940年9月开始，100架“英俊战士”战斗机装备了英军4个夜战中队。它能在AI雷达引导下悄悄接近目标，然后4门航炮同时开火，只需一个短点射就能将德国轰炸机打得凌空爆炸。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  “英俊战士”另一个可怕之处是发动机声音小，德军往往刚听到声音就已经进入它的射程，很快被击落了，所以德国人把“英俊战士”叫作“寂静死神”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -139,11 +177,9 @@
   </ins>
  </center>
  <p>
-  中国政府还在强调中国是全球首个正式推行数字货币的大国，让世界各国羡慕。数字货币推出后，人民币将成为“国际货币”，增加和
-  <span href="https://www.secretchina.com/news/gb/tag/美元" target="_blank">
-   美元
-  </span>
-  抗争的筹码。这明显就是忽悠，人民币自身没有信用，现在还是借的美元的信用，难道换成数字货币就有信用了？就可以和美元抗衡了？这显然是忽悠大家的说法。
+  <strong>
+   成功的关键是团队合作
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -158,11 +194,7 @@
   </div>
  </center>
  <p>
-  只是到时侯数字货币推广出来，就不用担心人民币贬值的压力了。毕竟，数字货币是无法兑换美元的，也不用担心
-  <span href="https://www.secretchina.com/news/gb/tag/黄金" target="_blank">
-   黄金
-  </span>
-  被掏空，因为数字货币也不能兑换黄金；也不用担心楼市资金冲击外汇市场，因为你卖房的钱，是换不了美元的。倒是人民币印钞会越来越方便了，监控民众消费、控制民众的隐私越来越方便了，让数字货币充当粮票布票越来越方便了。
+  具体到坎宁汉姆本人，他在夜战中击落20架德机，他驾驶的“英俊战士”飞机身上贴满了表示击落德机数量的“铁十字”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -177,7 +209,22 @@
   </div>
  </center>
  <p>
-  有了数字货币，我想应该也不用再让中资企业到美国上市赚美元了，毕竟，用数字人民币明显更爱国。
+  1940年11月19日，坎宁汉姆驾机拦截袭击伯明翰的德国机群，将一架Ju－88轰炸机击落，首开AI雷达引导攻击成功的记录。次年4月，坎宁汉姆的夜战生涯迎来胜利的高峰，他在一个夜晚就击落3架德机。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  二战结束后，有人问他如何成为夜战王牌，坎宁汉姆笑了笑：“很简单，观察员只要紧盯十字线上的绿点就行了，不需要吃很多胡萝卜。”然后，他又严肃地说：“其实，我们成功的关键是团队合作，夜战就像一座金字塔，两个人驾驶‘英俊战士’飞在高空，下面是地面引导雷达、探照灯和控制站，身处其中的每个人都要做好自己的工作，这样才能环环相扣。否则，多先进的飞机也是浪费！”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -241,13 +288,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/949189.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/949189.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/949189.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/14/949189.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/932501.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/932501.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/932501.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/08/932501.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/949189.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p6/932501.md' width='0px' height='0px'/>
