--- a/pages/p6/926305.md
+++ b/pages/p6/926305.md
@@ -1,4 +1,4 @@
-### 腰斩都不够：环京房价“臀斩”跌成负资产(图)
+### 北宋皇帝亲自出6道题 难倒无数才子(组图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,139 +6,68 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p>
-  【看中国2020年10月14日讯】在中国，
-  <span href="https://www.secretchina.com/news/gb/tag/楼市" target="_blank">
-   楼市
-  </span>
-  的话题可以说是永恒的主题，也总是能挑动大家的神经。这一次是帝都北京周边的房价，环京房价大跌，不仅腰斩，据说斩到了臀部以下，刷爆了国内外的自媒体。我们看一下是怎么回事。
-  <span id="hideid" name="hideid" style="color:red;display:none;">
-   <span href="https://www.secretchina.com">
+ <p style="text-align:center">
+  <img alt="宋徽宗绘《唐十八学士》局部" src="https://img2.secretchina.com/pic/2019/6-25/p2454151a458442205-ss.jpg"/>
+  <br>
+   宋徽宗是画家，是诗人，是书法家。图为宋徽宗绘《唐十八学士》局部。（图片来源：国立故宫博物院）
+   <span id="hideid" name="hideid" style="color:red;display:none;">
+    <span href="https://www.secretchina.com">
+    </span>
    </span>
-  </span>
+  </br>
  </p>
  <div id="txt-mid1-t21-2017">
   
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
+  对于
   <strong>
-   一
+   <span href="https://www.secretchina.com/news/gb/tag/宋徽宗" target="_blank">
+    宋徽宗
+   </span>
   </strong>
+  ，他作为
+  <strong>
+   皇帝
+  </strong>
+  丢了江山，并非明君所为，这是他的失败。而如果作为一个普通人，他又是那么的迷人。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  燕郊地理位置靠近北京主城区，据说和北京只有一河之隔，离天安门的直线距离只有30公里。在2016年之前，这里一度是房地产投资客追捧的热门区域。
- </p>
- <p>
-  近日，陆媒《界面新闻》10月6日报道，近期，网传一张环北京部分地区
-  <span href="https://www.secretchina.com/news/gb/tag/房价" target="_blank">
-   房价
+  我们都知道，除却君王，他是画家，是诗人，是书法家，是运动员，甚至是一个完美的情人，父辈打下来的江山正值盛世，国泰民安，他倒也简单天真，顺势把全部的心思用在了自己热爱的事情上，
+  <span href="https://www.secretchina.com/news/gb/tag/赵佶" target="_blank">
+   赵佶
   </span>
-  情况的图片（下图）。据该图显示，环北京楼市龙头燕郊房价从2017年的38000元跌至2020年的18000元，跌幅超52%。其中，跌幅最大的是永清，单价从23000元跌到6500元，跌超71%。这就不仅是腰斩，而且斩到了臀部，只剩下一双大腿了。跌幅最小的是开发区，单价从18,000元跌到了10,000块，跌幅44%。
- </p>
- <p style="text-align:center">
-  <img alt="环北京部分地区近几年房价变化情况一览" src="https://img3.secretchina.com/pic/2020/10-14/p2796051a551780316-ss.jpg" style="height:667px; width:600px"/>
-  <br>
-   环北京部分地区近几年房价变化情况一览（网络图片）
-  </br>
+  过的日子应该是所有艺术家梦想中的生活。那个时代，是洋溢着墨香和浓浓的文艺范儿的。
  </p>
  <p>
-  贝壳网数据显示，目前燕郊二手房均价为1.8万元，大厂、固安永清等二手房均价分别为1.6万元、1.3万元和1万元，霸州最低，单价0.91万元。举例来说，燕郊的福泽御园，2017年4月底52平成交价158万，而今年9月成交的52.3平84万，跌幅接近50%；燕郊大盘星河皓月的历史成交显示，2017年3月16日，该楼盘有一个一室一厅成交207万元，今年9月份，同样面积朝向的房屋，成交价仅100万元，跌幅超过50%。
- </p>
- <p>
-  按照房价跌幅50%计算，假设有投资者以50万元首付三成在2017年顶部买入一套房产（总价167万元左右），该套房产目前市值在80万元左右，账面浮亏同样80万元，加上3年多的房贷、税费等，其总计亏损可能达到100万元左右。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  据北京中原市场研究部的统计，今年7月份环京住宅市场多个区域成交量下跌，其中燕郊环比降幅最大，下降62%。从成交均价环比来看，燕郊降幅也是最大，成交均价1.88万元/㎡，环比下降5%。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  另据链家网成交系统统计数据显示，燕郊二手房价格于2017年4月达到最高点，挂牌均价为32,633元/平方米。而市场人士普遍认为，而目前基本是一万多，燕郊二手房价在三四年时间里基本是腰斩了。现在整个燕郊的房地产中介市场，店铺关门率达到50%以上，从业人员转行率达到70%以上。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  要知道，2016年燕郊的平均房价就已经突破3万，一些热点楼盘均价甚至突破4万，超过不少北京远郊的房价。也因此，燕郊曾经吸引来自全国的炒房客，一时风光无二。2016年起这轮全国房价暴涨，环京蹦得最高、涨得最猛。最夸张的是张家口的崇礼，短短一年时间房价涨了4倍，堪称环京之最。其次就是环京的北三县和南三县。2017年最高点时，北三县的燕郊均价高达3.5万/㎡，个别优质楼盘甚至每平到4万。大厂均价3万、香河均价2.3万-2.5万。南三县的固安均价每平高达2.7万-2.8万，永清1.9万-2万，霸州1.5万-1.6万，再加上大兴国际机场题材的加持，很多人相信未来、“买到就赚到”，其中包括不少炒房客，纷纷到燕郊抢房，一时楼价暴涨，风头无两。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  然而物极必反，接下来就迎来了政策调控的当头棒喝。2017年出台调控政策后，蹦得最高的燕郊房价就开始一路下滑，与最高时相比，下降了一半还要多，最高下跌71%，而且至今还没有止跌抬头的趋势。没有等来接盘侠，炒房客纷纷维权要求退房。从由媒体报道的匿名业主维权群消息来看，已有部分楼盘因为房价已经跌为负资产，业主正在组织“
-  <span href="https://www.secretchina.com/news/gb/tag/断供" target="_blank">
-   断供
+  宋徽宗最大的举措之一便是担任了“翰林图画院”院长，放着
+  <span href="https://www.secretchina.com/news/gb/tag/皇帝" target="_blank">
+   皇帝
   </span>
-  ”退房。
+  不当，兢兢业业地当起美术教授，编写教材，亲自授课，培养美术人才。
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
+ <p>
+  为了把最优秀的人才吸收到画院，徽宗建立考试制度，正式纳入科举考试之中，称“绘画试”。分佛道、人物、山水、鸟兽、花竹、屋木六科，摘古人诗句作为考题，要求考生画出诗句的意境，构思巧妙，不落俗套，做到笔意俱全。
+ </p>
+ <p>
+  不仅如此，宋徽宗还亲自出考题，亲自主考，亲自批卷，专业素质、创新意识考查样样不落下，综合素质过硬才能被录取进入画院。
+ </p>
  <p>
   <strong>
-   二
+   考题一：野渡无人舟自横
   </strong>
  </p>
  <center>
@@ -154,7 +83,7 @@
   </div>
  </center>
  <p>
-  说到燕郊楼市的下跌，不是没有道理的。燕郊的城市基本面决定了当地房价，从数据上看，燕郊今年上半年的房价还是涨了一些的。
+  此题取自唐朝诗人韦应物的《滁州西涧》。应试者大多画一空舟系于涧边，或者画一鹭鸶立于船上，或者画一鸟落在船杆……
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -169,97 +98,7 @@
   </div>
  </center>
  <p>
-  除了1-2月房价出现下跌，从3月开始，燕郊的房价也是在逐渐平稳回升，只不过涨幅太弱了一些。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  而今年上半年燕郊的利好其实非常多，比如说今年3月17日，国家发改委发布了通州与北三县协同发展规划。5月廊坊市也发布了引进人才政策，只要满足大专学历，在当地就业就能在燕郊（北三县）落户。而前段时间，也传出燕郊新房对北京社保放开限购的消息。这些利好都不是小利好，但是楼市的表现并没有出现很明显的上涨。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  燕郊楼市让人大失所望，原因其实很简单。燕郊乃至整个环京地区楼市的购买力主要来自北京，当地人能贡献的力量实属太少。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  那北京现在是什么情况呢？与2017年3月房价最高时对比，三年来北京二手房均价已经下跌超过30%，部分商品房项目均价甚至下降了40%以上。北京的房价在下跌，燕郊房价就没有理由上涨。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  另一方面，人口是楼市上涨的中期基础，而北京这几年在向外疏散人口，驱赶低端人口，2017年北京市常住人口同比减少了2.2万人，2018年同比下降了16.5万，而到了2019年同比又下降了0.6万人。北京的常住人口连续3年下降，购房需求也会出现下降。但是这些流出的人口大部分并没有流向燕郊、北三县，而是到了深圳，杭州这些一、二线城市。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  燕郊除了房地产，没有别的支柱性产业，公共服务和基础设施建设也无法满足快速集聚的人口，与人口规模严重不匹配。今年7月份，环京住宅市场多个区域成交量下跌，其中燕郊环比降幅最大，环比下降62%。所以燕郊想要发展房地产市场，要先把城市基本面做好。这样看来，只要限购不放松，燕郊楼市就不会真正回暖，腰斩趋势就不会结束。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  今年“金九银十”期间天津房价普降，之前就介绍过天津郊区房价腰斩，以及市区房价下降30%的一些情况，最高跌幅40%。还有石家庄房价的大跌，这表明，从北京到环京地区都出现了房价的大规模集体性下跌。
+  受到赵佶赏识的却是这样一幅画面，一个卧于船头的船夫，寂寞失落，百无聊赖。作者意在说明此水无人过渡，连摆渡之人也无聊，打起瞌睡来。既突出无乘客，又突出无人“渡”，紧扣诗句。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -275,7 +114,7 @@
  </center>
  <p>
   <strong>
-   三
+   考题二：踏花归去马蹄香
   </strong>
  </p>
  <center>
@@ -291,7 +130,7 @@
   </div>
  </center>
  <p>
-  这里有一个典型的例子，让大家来理解房子成为负资产的概念。
+  这个题目也是独具匠心的。如何表现“踏花归来马蹄香”中的“香”？
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -306,7 +145,7 @@
   </div>
  </center>
  <p>
-  2016年，张姓业主以8600元/㎡的价格买入了一套环京永清的房子。因买入时点好、买在了房价暴涨的前夜，一度被身边的朋友夸耀有眼光……她自己也有些飘飘然，想着自己三十余年来总算逮住了一次暴富机会、搭上了楼市红利的快车。可让她没想到的是，自己不过是坐了一次房产财富的过山车——在高处癫狂、在低处落寞，深刻体会到了“没有兑现的财富终归是纸面财富”。
+  考生们抓耳挠腮，煞费苦心：“香”是抽象的，只能用鼻子闻到，不能用眼睛看到，怎么画出来？
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -321,7 +160,7 @@
   </div>
  </center>
  <p>
-  她买的那个项目，在2017年3月最高点时曾涨至1.8万-1.9万，而现在三期高层卖7500元、洋房卖8000元。也就是说，买了将近四年，张姓业主的房子不但一分没涨、还跌了1000元。以前被亲友夸赞有眼光，现在则被惋惜到运气差，自己的房产暴富梦自此破碎。
+  有的画家绞尽了脑汁，在“踏花”二字上下功夫，画面上画了许许多多的花瓣儿，一个人骑着马在花瓣儿上行走，表现出游春的意思；有的画家煞费苦心在“马”字上下功夫，画面上的主体是一位跃马扬鞭的少年，在黄昏疾速归来；有的画家运思独苦，在“蹄”字上下功夫，在画面上画了一只大大的马蹄子，特别醒目。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -336,7 +175,7 @@
   </div>
  </center>
  <p>
-  张姓业主还算好的，毕竟买得早、房价没那么高。惨的是在2016年底至2017年初恐慌抢房的那批人，现在的价格不是腰斩、而是“臀斩”了……还不到自己买入价格的零头，成为了负资产。三年多的月供损失也罢、30%的首付跌没了也罢，只好自认倒霉，可更让人难以接受的是自己的房产成了负资产。原房屋总价170万的房子，在付了30%即50多万的首付后、又从银行贷款70%即120万，可现在房子值多少钱呢？对不起，只值不到80万。什么意思？手里的这套房子目前只值80万，可欠银行的贷款却是120万，把房子抵债给银行还倒欠银行40万！许多人不愿意了，纷纷要求“维权退房”……
+  赵佶看了，都很不满意。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -351,7 +190,7 @@
   </div>
  </center>
  <p>
-  一旦房价下跌幅度超过30%，已经按揭贷款买房的群体将会出现两种心理变化：
+  只有一位画家独具匠心，他不是单纯着眼于诗句中的个别词，而是在全面体会诗句含义的基础上着重表现诗句末的“香”字。他的画面是：在一个夏天的落日近黄昏的时刻，一个游玩了一天的官人骑着马回归乡里，马儿疾驰，马蹄高举，几只蝴蝶追逐着马蹄蹁跹飞舞。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -366,7 +205,208 @@
   </div>
  </center>
  <p>
-  首先是刚需购房者群体，所谓“刚需”，就是买房以自住为目的。刚需群体一般会认为，无论房价涨跌对自己未来生活影响不大，房贷不会多一分也不会少一分，房价涨了，不能卖了赚钱，房价跌了，也不会去卖房还债。说到底，房价涨跌对刚需群体而言，仅仅是账面上的数字而已，如果不是收入等其他方面产生问题，刚需购房者不会因为房价下跌过多而选择弃房断供。
+  这位考生当然这脱颖而出，以榜首的位置入选画院。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   考题三：竹锁桥边卖酒家
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  这是画院的著名试题之一。众多考生皆重于酒家，以小溪流水、野渡小桥、竹林清风等藉以衬托，皆不中赵佶之意。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  唯有一名叫李唐的画家，独辟蹊径，画了一泓溪水，小桥横卧，桥边则是一片竹林，唯有那郁郁葱葱的翠竹中，挂着一幅迎风招展的酒帘。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  赵佶看后大悦，认为酒家藏在竹林中正符合“锁”字的意境，亲自圈点为第一名。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   考题四：深山藏古寺
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  这个题目要画好并不容易，画中的古寺要“藏”起来，又要让人觉得它是存在的。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  有的考生在山腰画座古庙，半遮半露，总算有“藏”的意思……
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  有的在丛林深处画座古庙，有的只画出庙的一角或一段残垣断壁……
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  主考官一连看了很多幅，都不满意，有一幅画深深吸引了他，他再仔细端详了一番，便连连点头称赞，说：“好，好，这才是‘魁选’之作呀！”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  那幅画好在哪里呢？那位高明的画家，根本没有画庙，画的是崇山峻岭之中一股清泉飞流而下，泉边有个老态龙钟的和尚，正一瓢一瓢地舀水。就这么一个挑水的和尚，就把“深山藏古寺”的题目表现得透彻极了，把“藏”字表现出来了。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  和尚挑水，当然是用来烧茶煮饭，洗衣浆衫，这就叫人想到附近一定有庙；和尚年迈，还得自己来挑水，可以想像到那庙是座破败的古庙了。庙一定是在深山中，画面上看不见，这就把“藏”字表现出来了。这幅画比起那些画庙的一角或庙的一段墙垣的，更切合“深山藏古寺”的题意。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   考题五：嫩绿枝头红一点
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  “嫩绿枝头红一点”，应该还算好表达，难就难在题目还有后半句“恼人春色不须多”。如何表现这种春色不须多的境界呢？
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -385,7 +425,7 @@
   </ins>
  </center>
  <p>
-  其次，对于投资和投机炒房群体来说，其想法则完全不一样。房产，对他们来说就是一件投资品，相比其他商品，仅是标的价值更大些而已。假如房价腰斩，即使把房子卖了，也难以支付欠银行的70%贷款，所以，对于这类群体来说，他们可能会把房子丢给银行，让银行处理。
+  中规中矩的答案就是这样的，直接在绿叶上画了朵红花，或是一丛绿叶中露出朵红花。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -400,7 +440,7 @@
   </div>
  </center>
  <p>
-  银行房贷合同内容中约定：抵押期间由于乙方的过错或其他原因造成抵押物价值减少，乙方应在三十天内向甲方提供与减少的价值相当的其他担保。乙方（借款人）发生下列情况之一的，甲方（银行）有权停止提供未拨付的贷款，提前收回已发放的贷款本息或处置抵押物。
+  但有位画家画了绿树中里一个亭阁，一位仕女正倚栏而立，她娇艳的樱桃小口在一片绿的画面中显得明艳照人。便有一动人情思的感觉，把“一点红”的含意作了灵巧恰当的表现。不用说，这位画家凭借这一巧思脱颖而出。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -415,7 +455,9 @@
   </div>
  </center>
  <p>
-  这段话翻译成白话的意思是，当房产价值发生减少，比如房屋倒塌、房价下跌等情况，你按揭的这套房产自身价值已不够偿还银行的欠款，此时，银行有权利要求购房者提供新的抵押物或者弥补银行的损失，同时，银行可立即处置抵押物变现。如果乙方既不提供价值相当的担保，又不提前清偿等值的贷款本、息，甲方有权宣布贷款提前到期，要求乙方提前清偿全部贷款本、息。
+  <strong>
+   考题六：蝴蝶梦中家万里
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -430,7 +472,7 @@
   </div>
  </center>
  <p>
-  举个例子，小明买了一套价值100万的房子，首付30万，剩下70万向银行按揭贷款。3年过去了，小明还了本金4万元，还欠银行66万本金。就在此时，房价迅速下跌，这套房子只值50万了，按照贷款合同约定，银行就给小明算一笔账：当时，借款人小明向银行申请房贷是以价值70万的房产作为抵押物，而如今，房子仅仅值50万，但他还欠银行66万本金，现在银行有权要求小明补足16万差额。此时，小明要么拿出16万现金做提前还贷，要么看看还有什么值钱的东西可作为抵押物抵押给银行。
+  此题取自“蝴蝶梦中家万里，杜鹃枝上月三更”，寓意很深。诗句出现“蝴蝶”、“子规（杜鹃）”、“树枝”、“明月”，表达了游子孤眠异乡的空虚寥落心情。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -445,7 +487,7 @@
   </div>
  </center>
  <p>
-  看到这里，相信大家应该理解，银行虽然不希望房价下跌，但是即使下跌，也提前为自己准备了“救生衣”；如果房价真的大幅下跌，最终买单的还是购房者自己。环京那帮炒房客，现在之所以没被大规模索要抵押物，一是因为他们嘴上说断供，内心是不敢的，还可以做牛做马或拆东墙补西墙撑一段时间，二是因为银行勉强还撑得住。但庚子年是奇特的，再加上中美进入冷战，一切都在加速，包商银行破产可以看成是个标志性事件，恒大逼宫事件更是为楼市加了一把火，未来既是场保卫银行的大戏，更是保卫实体经济的硬仗，雷霆手段不会少，楼市八成是将处于银行倒闭和断供弃房的双重打击之下……
+  众考生皆不中意，唯一被选中的是王道亨的试卷。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -460,7 +502,7 @@
   </div>
  </center>
  <p>
-  现在在环京业主微信群里，有人发起“奋起抗争/用脚投票/断供退房”的倡议，并表示“当断供人数款项够一定数目，会有多个部门来管这事……这是要开发商的命，业主只要当初宣传承诺的配套，无法实现就退房”。所以断供的利用当然不是房价下跌、而是之前承诺的配套没达标。
+  王道亨所绘的是苏武牧羊图，画面上苏武假寐，在异国的冰天雪地中，正在打瞌睡，睡梦中一定是千万里远的家乡：林木扶疏，双蝶追逐其间，上立子规，月正当空，木影在地。犹闻啼声。王道亨较好地把握了题目的含义，一举夺魁。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -475,7 +517,7 @@
   </div>
  </center>
  <p>
-  这两年楼市维权迭起，表面的原因大多是“配套不达标”、“绿化太差”、“不是承诺的名校”，但稍微懂些内情的人都知道……主要原因是房价没涨、甚至还跌了——就像这批房价“臀斩”的环京业主，在“负资产”状态下，如果能退房最多也就亏个首付、反而能挽回些损失。房价没涨亏了月供、房价下跌亏了首付、房价大幅下跌还倒欠银行一笔钱……
+  以上，宋徽宗的考试方式叫“诗题取士”，这让画家们深刻领悟到了“没文化真可怕”这个道理。他们不能再死描死背地画画，而要去读书，从中锻练诗意的想像空间，以更高的层次理解绘画。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -490,7 +532,25 @@
   </div>
  </center>
  <p>
-  虽然残酷，但在楼市上涨时抢房的时候，就要做好走到这一步的准备，这是买房投机时必须要承担的后果。断供说起来容易，实施起来并不轻松。不还债真上了征信黑名单，且不说自己完了，孩子上学肯定会有影响，孩子以后考事业单位公务员可是要政审的，甚至入国企都可以一票否决，个人出行乘坐交通工具、出国都会受到影响，真正谁敢断供？当然，是否愿意断供是一回事，会不会断供又是一回事。当你耗尽毕生积蓄，借遍债务仍然不能还贷……
+  但是，你别以为考进来就完事儿了，对于考进来的画家，还得按身份分为“士流”和“杂流”，不断培训不断考核，品德智力等全面发展，再分职称。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="text-align:center">
+  <img alt="宋徽宗《蜡梅山禽图》" src="https://img2.secretchina.com/pic/2019/6-25/p2454171a579455601-ss.jpg"/>
+  <br>
+   宋徽宗《蜡梅山禽图》是迄今最早一张，“诗、书、画”都是自己原创的作品。（图片来源：国立故宫博物院）
+  </br>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -505,40 +565,11 @@
   </div>
  </center>
  <p>
-  大家不要以为这只是燕郊和环京楼市的个别现象，和自己无关。就目前观察，北京、天津、河北、河南很多城市，都在上演二手房大跌30%或者腰斩的现象。就像前几年投资不过山海关，东北经济衰退导致房价下跌一样，这股浪潮已经从东北蔓延到了北方和中原，也许要不了多久就会顺势而下进入长三角和珠三角，所以，在经济红利和人口红利都被消耗完之后，最后剩下的当然就是楼市的一地鸡毛。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  很多人不相信自己的房价会下跌，认为政府有办法控制，这是类似斯德哥尔摩综合症的表现，将统治自己的人想得过于强大，放弃反抗意志的表现。在经济规律面前，任何强权都不会例外，前苏联也是如此。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
+  比如宋徽宗就曾经要求画院那帮画师，让他们连孔雀要飞起来的时候，先抬左脚还是右脚，这个都要搞清楚。在这样的格物精神下，出现很多写实的画。比如，宋徽宗的《山禽腊梅图》，这张画是迄今最早一张，“诗、书、画”都是自己原创的作品。直接影响了后来一说起传统
+  <span href="https://www.secretchina.com/news/gb/tag/中国画" target="_blank">
+   中国画
   </span>
-  未来楼市的预演，必然是燕郊等环京楼市“臀斩模式”从北方向南方的全面推进。房子卖不出去，降价甩房、断供、银行收房、法院拍卖、上征信黑名单将会成为神州人的日常，这个趋势是不变的，我坚信！
+  就必须是“诗、书、画”的三个经典元素。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -553,7 +584,41 @@
   </div>
  </center>
  <p>
-  北方已经在大规模上演这种模式了，长三角、珠三角等南方各地还会远吗？……
+  到了公元1126年，金兵攻破汴京，将徽、钦二帝押送北方，汴京被洗劫一空，
+  <span href="https://www.secretchina.com/news/gb/tag/北宋" target="_blank">
+   北宋
+  </span>
+  灭亡，史称“靖康之耻”。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  被囚禁期间，宋徽宗受尽精神折磨，写下了许多晦恨、哀怨，凄凉的诗句，“家山回首三千里，目断山南无雁飞”，这一句算是真正体会王道亨所绘苏武牧羊图的真正境界了。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  于个人，他堪称艺术家，对北宋及中国绘画发展，功不可没，谁也不能否认他在艺术的惊人成就与才华。于国家，昏庸无能，作为一国之主，身负重任，却不务正业。人们总是向往一种完全不同的人生，大风大浪羡慕安宁平静，平淡无奇追求矫情曲折，但事实总逃不过一句“无可奈何”，其实就是逃脱不了神安排的命运，李煜是，赵佶亦是如此。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -617,13 +682,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/949190.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/949190.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/949190.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/14/949190.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/926305.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/926305.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/926305.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/04/926305.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/949190.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p6/926305.md' width='0px' height='0px'/>
