--- a/pages/nf4514/n12606261.md
+++ b/pages/nf4514/n12606261.md
@@ -15,40 +15,37 @@
 #### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 <div><p>
- 【大纪元2020年12月09日讯】（大纪元记者徐简、戴芙若、李言综合报导）在美国德克萨斯州石破天惊地向美国
+ 【大纪元2020年12月09日讯】（大纪元记者徐简、戴芙若、李言综合报导）美国德州石破天惊地向美国
  <ok href="https://www.epochtimes.com/gb/tag/%E6%9C%80%E9%AB%98%E6%B3%95%E9%99%A2.html">
   最高法院
  </ok>
- 提起诉讼状告乔治亚州、密歇根州、宾夕法尼亚州和威斯康星州的选举违宪后，有更多州表示支持，最高法院已经受理了德州的案子。目前天平正在向
+ 提起诉讼，状告乔治亚州、密歇根州、宾夕法尼亚州和威斯康星州的选举违宪后，有更多州表示支持。目前天平正在向
  <ok href="https://www.epochtimes.com/gb/tag/%E5%B7%9D%E6%99%AE.html">
   川普
  </ok>
  （特朗普）总统一方倾斜。
 </p>
 <p>
- 阿肯色州、阿拉巴马州、密苏里州和路易斯安那州的总检察长已发表声明，支持德州在
+ 密苏里州、肯塔基州、路易斯安那州、密西西比州、南卡罗来纳州、南达科他州、阿拉巴马州、阿肯色州、印地安那州和佛罗里达州表示，支持德州在
  <ok href="https://www.epochtimes.com/gb/tag/%E6%9C%80%E9%AB%98%E6%B3%95%E9%99%A2.html">
   最高法院
  </ok>
- 提出的诉讼，以维护2020年的选举诚信。
+ 提出的诉讼，以维护2020年的选举诚信。最高法院规定，四个摇摆州必须在12月10日下午3点前提交辩护状。
 </p>
 <p>
  周二，美国国会就职典礼联合委员会否决了筹备
  <ok href="https://www.epochtimes.com/gb/tag/%E6%8B%9C%E7%99%BB.html">
   拜登
  </ok>
- 1月的就职典礼的议案，投票结果是3:3。
-</p>
-<p>
- 委员会的民主党人提出，国会在2021年1月20日为该党总统候选人乔‧
- <ok href="https://www.epochtimes.com/gb/tag/%E6%8B%9C%E7%99%BB.html">
-  拜登
- </ok>
- （Joe Biden）举办就职典礼，但是共和党表示，美国多州正进行选举的相关诉讼，总统
+ 1月的就职典礼的议案，投票结果是3:3。委员会的民主党人提出，国会在2021年1月20日为该党总统候选人乔‧拜登（Joe Biden）举办就职典礼，但是共和党表示，美国多州正进行选举的相关诉讼，总统
  <ok href="https://www.epochtimes.com/gb/tag/%E5%B7%9D%E6%99%AE.html">
   川普
  </ok>
- 拒绝承认舞弊的选举结果。由于委员会不承认拜登是当选总统，关于就职的相关安排无法启动。
+ 拒绝承认舞弊的选举结果。由于委员会不承认
+ <ok href="https://www.epochtimes.com/gb/tag/%E6%8B%9C%E7%99%BB.html">
+  拜登
+ </ok>
+ 是当选总统，关于就职的相关安排无法启动。
 </p>
 <p>
  川普律师团队正式发布了一份声明说，12月8日即被称为“安全港”的这个日子并非确定选举结果的最终期限。实际上明年1月6日才是国会统计各州代表票数的日子，这才是“具有终极意义”的实际日期。
@@ -67,16 +64,117 @@
  情况的实时更新：
 </h4>
 <h3>
+ 川普律师：摇摆州议会将让选举人转投川普
+</h3>
+<p>
+ 川普（特朗普）总统竞选团队的律师詹娜·埃利斯（Jenna Ellis）周一（7日）表示，竞选团队相信，至少一个州的立法机构会收回选择选举人的权力，另选选举人，并使他们投票支持川普。
+</p>
+<p>
+ 尽管川普竞选团队仍在加紧推动在摇摆州的诉讼，但埃利斯表示，她与川普律师团队协调员朱利安尼（Rudy Giuliani）已专注于去州立法机构并提醒他们，他们拥有宪法赋予的权力确保他们选择自己的代表。
+</p>
+<p>
+ 埃利斯以虚拟方式现身福克斯商业频道（Fox Business）时表示：“当他们的州所有这些法律法规都被无视的时候，确保他们收回他们的代表（指选举人票）、不让这些虚假的认证直接向前推进，实际上就是他们的宪法义务、责任和专有权力。”
+</p>
+<p>
+ 川普竞选团队相信，乔治亚州州议会这样做，并希望亚利桑那、宾夕法尼亚等州的立法机构效仿。
+</p>
+<p>
+ “我们非常相信，至少在乔州，希望也在亚利桑那州、宾州和密歇根州，这些州的立法机关真的会很重视选举诚信，他们会在14日之前收回他们的代表，然后自行进行选举诚信独立调查，之后将向选举人团（Electoral College）认证实际上反映民意的代表，而不是（认证）那些虚假和腐败（选举）的结果。”她说。
+</p>
+<p>
+ 乔州几名共和党州议员已发起请愿，呼吁召开州议会特别会议，以期收回选择选举人的权力、另选选举人团。目前，他们正努力征集签名，以使特别会议得以召开。
+</p>
+<p>
+ <ok href="https://www.epochtimes.com/gb/20/12/8/n12604500.htm">
+  详情请阅全文
+ </ok>
+ 。
+</p>
+<h3>
+ 川普律师团：安全港非最终期限 将继续战斗
+</h3>
+<p>
+ 本周二（12月8日）是安全港（safe harbor）的截止日期，被普遍认为是各州认证选举结果的最后期限，但川普（特朗普）律师团队表示，安全港并非确定选举结果的最终期限，他们将继续在舞弊诉讼案上战斗。
+</p>
+<p>
+ 川普竞选团队法律顾问珍娜‧埃利斯（Jenna Ellis）周二在福克斯商业节目中说，明年1月6日才是国会统计各州代表票数的日子，是“具有终极意义”的实际日期。
+</p>
+<p>
+ “就连金斯伯格大法官（Ginsburg）在布什诉戈尔一案（Bush v. Gore）的选举角逐中也承认，她所说的最终有意义的日期是1月6日，那是国会实际计算代表票数的日子。”
+</p>
+<p>
+ 埃利斯接着说：“虽然今天来到安全港的最后期限，而下周12月14日有选举团的会议，但最终有意义的日期是1月6日。”
+</p>
+<p>
+ 截至周二，川普律师团队、各联邦和州议员、知名律师与民间组织提出的诉讼，已经在六个关键州（乔治亚州、亚利桑那州、宾州、密歇根州、内华达州和威斯康星州）开打。
+</p>
+<p>
+ <ok href="https://www.epochtimes.com/gb/20/12/8/n12604231.htm">
+  详情请阅全文
+ </ok>
+ 。
+</p>
+<h3>
+ 朱利安尼预计周三出院
+</h3>
+<figure class="wp-caption aligncenter" id="attachment_12596311" style="width: 600px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2020/12/472690.jpg">
+  <img alt="" class="size-large wp-image-12596311" src="https://i.epochtimes.com/assets/uploads/2020/12/472690-600x400.jpg"/>
+ </ok>
+ <br/><figcaption class="wp-caption-text">
+  乔治亚州参议院司法委员会2020年12月3日举办选举听证会。川普法律团队律师朱利安尼参加。（林乐予／大纪元）
+ </figcaption><br/>
+</figure><br/>
+<p>
+ 美国总统川普的律师、前纽约市长鲁迪‧朱利安尼（Rudy Giuliani）感染中共病毒后，表示预计周三会出院。
+</p>
+<p>
+ 朱利安尼在华盛顿的一家医院接受治疗。他此前不想去医院，但川普对他说，“别傻了，如果送你去医院，我们可以在三天内搞定它。”这话说服了他。
+</p>
+<p>
+ 周一，川普对记者说，他刚刚与76岁的朱利安尼进行了电话交谈，他“情况非常好”“没有发烧”。朱利安尼表示，除了咳嗽，他之前出现的所有症状几乎都消失了。
+</p>
+<p>
+ <ok href="https://www.epochtimes.com/gb/20/12/9/n12606472.htm">
+  详情请阅全文
+ </ok>
+ 。
+</p>
+<h3>
+ 最高院要求四摇摆州12月10日提交辩护状
+</h3>
+<p>
+ 当地时间周二（12月8日），美国最高法院将12月10日下午3点设定为最后期限，要求被德克萨斯州以“违宪”起诉的宾夕法尼亚州、乔治亚州、密歇根州和威斯康星州在此前提交辩护状。
+</p>
+<p>
+ 在本案备查簿的一份未签名摘要中，法院指示被告，对原告提出的诉讼请求和申请临时限制令的动议提交辩论。
+</p>
+<p>
+ 德州的诉讼要求法院裁定：四个州的2020选举违反宪法；禁止点算四个州的选举人团投出的票；对于已经任命选举人的被告州，法院指示各州立法机构依据宪法任命新选举人。除了寻求补救措施来确定2020选举结果，德州还要求最高法院为未来的竞选明确法律。
+</p>
+<p>
+ <ok href="https://www.epochtimes.com/gb/20/12/9/n12606267.htm">
+  详情请阅全文
+ </ok>
+ 。
+</p>
+<h3>
  德州诉四个摇摆州违宪 多州表示支持
 </h3>
 <p>
- 德州周二（12月8日）向美国最高法院提出诉讼，对乔治亚州、密歇根州、宾夕法尼亚州和威斯康星州的选举程序提出异议，认为他们违反了宪法，现在已有阿肯色州、阿拉巴马州、密苏里州和路易斯安那州表示支持德州提诉。
+ 德州周二（12月8日）向美国最高法院提出诉讼，对乔治亚州、密歇根州、宾夕法尼亚州和威斯康星州的选举程序提出异议，认为他们违反了宪法，现在已有密苏里州、肯塔基州、路易斯安那州、密西西比州、南卡罗来纳州、南达科他州、阿拉巴马州、阿肯色州、印地安那州和佛罗里达州表示支持德州提诉。
 </p>
 <p>
  德州指控四州违反宪法、更改了选举规定、对选民采取不平等待遇并放宽了维护选票诚信的措施，引发重大投票违规行为。德州要求最高法院宣布，这四个关键州在2020年总统大选中违反宪法。
 </p>
 <p>
  诉讼在12月7日提出，第二天就被立案。诉讼中要求，禁止统计这四州投出的选举人票。对于已指定选举人的被告州，要求法院命令各州立法机构依据宪法指定新的选举人。
+</p>
+<p>
+ <ok href="https://www.epochtimes.com/gb/20/12/9/n12606132.htm">
+  详情请阅全文
+ </ok>
+ 。
 </p>
 <h3>
  川普律师：德州最高院诉讼是“终极案件”
@@ -89,6 +187,12 @@
 </p>
 <p>
  他表示，最高法院要求宾夕法尼亚州、乔治亚州、密歇根州和威斯康星州这四个战场州必须在美国东部时间周四下午3点之前，对德州总检察长投诉的选举欺诈指控作出“积极回应”。
+</p>
+<p>
+ <ok href="https://www.epochtimes.com/gb/20/12/9/n12605895.htm">
+  详情请阅全文
+ </ok>
+ 。
 </p>
 <h3>
  亚利桑那议员力推取消认证：选举需公正透明
@@ -110,6 +214,12 @@
 <p>
  议员们表示，这不是关系到川普一个人的问题，也不是非要哪个人获胜，而是关系到选举是否公正公平的问题，也是关系到子孙后代的大事。
 </p>
+<p>
+ <ok href="https://www.epochtimes.com/gb/20/12/9/n12605346.htm">
+  详情请阅全文
+ </ok>
+ 。
+</p>
 <h3>
  共和党团提诉 要求乔治亚确保参院决选守法
 </h3>
@@ -129,6 +239,11 @@
 </p>
 <p>
  共和党全国委员会认为，在11月3日的大选期间以及随后在乔治亚州的重新计票过程中“政党委员会任命投票观察员对投票过程进行监督的合法权利，在许多投票站和制表地点都被剥夺了”。
+ <br/>
+ <ok href="https://www.epochtimes.com/gb/20/12/9/n12605337.htm">
+  详情请阅全文
+ </ok>
+ 。
 </p>
 <h3>
  选举舞弊指控不断涌现 多数共和党议员仍保持沉默
@@ -149,6 +264,12 @@
 </p>
 <p>
  然而，众议员的态度似乎不符合选民的情绪。据11月9日公布的POLITICO/Morning Consult民调，超过70%的共和党选民不相信选举是自由公正的。根据《大纪元时报》12月7日对超过1,700名订户的线上调查，在乔治亚州，超过90%的川普支持者不相信总统选举的结果。
+</p>
+<p>
+ <ok href="https://www.epochtimes.com/gb/20/12/9/n12605383.htm">
+  详情请阅全文
+ </ok>
+ 。
 </p>
 <h3>
  川普吁大法官和立法机构勇敢做正确的事
@@ -173,6 +294,12 @@
 <p>
  “我获得了近7500万张选票，这是美国历史上现任总统的最高票数。……如果有人有勇气，我知道下一届政府将成为谁的政府。”总统说。
 </p>
+<p>
+ <ok href="https://www.epochtimes.com/gb/20/12/8/n12605055.htm">
+  详情请阅全文
+ </ok>
+ 。
+</p>
 <h3>
  川普赦免弗林两周后 联邦法官终于撤销指控
 </h3>
@@ -195,6 +322,12 @@
 </p>
 <p>
  弗林的律师西德尼‧鲍威尔（Sidney Powell）和保守派媒体成员指责联邦调查局（FBI）诱捕弗林，并将他的案子作为进一步扩展通俄门调查范围的基础。
+</p>
+<p>
+ <ok href="https://www.epochtimes.com/gb/20/12/9/n12605240.htm">
+  详情请阅全文
+ </ok>
+ 。
 </p>
 <h3>
  宾州共和党议员提告阻止认证选举结果 最高法院驳回上诉
