--- a/pages/p3/955271.md
+++ b/pages/p3/955271.md
@@ -1,4 +1,4 @@
-### 唐娟保释外出 栖身“神秘”华裔律师寓所(图)
+### 举报亚裔老板偷税 举报人获141万奖金(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align: center;">
-  <img alt="唐娟 神秘人 华人 律师" src="https://img3.secretchina.com/pic/2020/7-18/p2735052a973615419-ss.jpg" style="height:337px; width:600px"/>
+  <img alt="华人超市 偷税漏税 " src="https://img3.secretchina.com/pic/2020/3-31/p2659859a508690846-ss.jpg" style="height:450px; width:600px"/>
   <br>
-   唐娟保释外出，暂时栖身“神秘”华裔律师寓所。不过联邦官员担心唐随时有潜逃可能，动议将她还押监狱。（公寓示意图/非本文图片/图片来源：Pixabay)
+   华人超市（示意图/非本文图片/图片来源：看中国）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,39 +21,30 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://158.247.195.190:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://158.247.195.190:8808/gb/)  &nbsp;|&nbsp; [YouTube热门频道](http://158.247.195.190/youtube.html) &nbsp;|&nbsp; [网门免翻墙](http://158.247.195.190:11000/show.aspx?name=ogHome)
-
-#### 💥 [九评共产党](http://158.247.195.190:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://158.247.195.190:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://158.247.195.190:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://158.247.195.190:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  《红墙的记忆》- 中南海万人和平上访纪实](http://158.247.195.190:10000/videos/news/../legend/index.html)
-
-#### [ 🔥  黨不叫我們知道的那些事](http://158.247.195.190:10000/videos/news/truth02.html)
-
-#### [ 🔥  爲何中共舉國體制造芯片難以成功 ｜「透視中國」](http://158.247.195.190:10000/videos/news/don03.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年9月16日讯】被指控申请赴美留学签证时隐瞒
+  【看中国2020年12月10日讯】12月7日，
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/中共军人" target="_blank">
-    中共军人
+   <span href="https://www.secretchina.com/news/gb/tag/美国" target="_blank">
+    美国
    </span>
+   纽约
   </strong>
-  身份的女研究员
+  州检察长詹乐霞(Letitia James)宣布，一亚裔经营的纽约市
   <strong>
-   唐娟
+   连锁超市
   </strong>
-  ，上周四（9月10日）晚获得保释。目前，她暂时住在以房产为她担保的一名
+  ，因多次
   <strong>
-   “神秘”律师
+   偷税漏税
   </strong>
-  寓所。不过，联邦官员正试图将她还柙，以免她潜逃。
+  被控，处以罚款470万美元。按照《反虚假申报法》及吹哨人奖励制度，举报人最少可获得141万美元奖励。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
@@ -61,35 +52,20 @@
  </p>
  <p>
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/唐娟" target="_blank">
-    唐娟
-   </span>
-   被保释在外暂时栖身“神秘”华人律师寓所
+   亚裔超市被举报偷漏税
   </strong>
  </p>
  <p>
-  据海外媒体报道，9月10日，37岁的唐娟从
-  <span href="https://zh.wikipedia.org/wiki/%E5%8A%A0%E5%88%A9%E7%A6%8F%E5%B0%BC%E4%BA%9A%E5%B7%9E" target="_blank">
-   美国加州
-  </span>
-  沙加缅度（Sacramento）县监狱获释。目前，她暂时住在那位自称与她素昧平生的“神秘”华裔律师寓所里。
+  纽约当地媒体报导，根据詹乐霞办公室，从2012年到2018年间，“食品世界超市”（Food World Supermarket）及其下属的四家副食品公司，用三种方式偷漏税被人举报，处以罚款470万美元。
  </p>
  <p>
-  唐娟被捕后，一名自称与唐娟素不相识的华人律师表示，愿意将自己价值75万美元的房产作担保保释唐娟。很多人质疑，既然这名C姓华人律师与唐娟素不相识，为何愿意用自己价值75万美元的房产做担保？（相关阅读：
-  <span href="https://www.secretchina.com/news/gb/2020/08/29/944542.html">
-   神秘华男抵押房产作担保 法官同意保释唐娟
-  </span>
-  ）
+  报导称，这3种偷漏税方式分别是：
  </p>
  <p>
-  前几天，这名“神秘的担保人”身份终于被曝光。
+  1、用附加在纽约州彩票机上的独立收银机，来记录超市非彩票商品的现金销售。
  </p>
  <p>
-  报道称，这名之前被媒体称为C先生的华人男子，名叫史蒂芬・崔（Steven Cui），是来自旧金山湾区的一名华裔民事律师，对于保释一个与自己“素不相识”的人的质疑，崔解释说，这么做的原因是为了证实
-  <span href="https://www.secretchina.com/news/gb/tag/美国" target="_blank">
-   美国
-  </span>
-  司法的合理性。
+  2、通过假的商品退货单，以少报销售额；
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -104,11 +80,7 @@
   </div>
  </center>
  <p>
-  9月10日，美国地方法官肯德尔・纽曼（Kendall J.Newman）批准唐娟保释，但要求唐娟在崔律师家中隔离14天，以预防
-  <span href="https://www.secretchina.com/news/gb/tag/武汉肺炎" target="_blank">
-   武汉肺炎
-  </span>
-  病毒的传播。14天后，在未经预审官员许可的情况下，不得离开崔家。
+  詹乐霞办公室指出，老板李赫俊（音译）曾强迫“食品世界超市”的门店经理制作假的退货收据，上面记录了许多商品的退货情况，但实际上这些商品从未被退回。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -123,7 +95,30 @@
   </div>
  </center>
  <p>
-  法官还命令她“只有在（本案）律师在场的情况下，才能通过电话或视听会议”与中共领事馆官员谈话。
+  3、用现金和帐外支付的形式来付员工工资，避免每周数千元的预扣税款；老板通过
+  <span href="https://zh.wikipedia.org/wiki/%E7%BE%8E%E5%9B%BD%E5%9B%BD%E5%AE%B6%E7%A8%8E%E5%8A%A1%E5%B1%80" target="_blank">
+   报税
+  </span>
+  的工资单支付不到一半员工的薪水，再用现金支付大部分员工的其余部分工资，这使“食品世界超市”得以逃避雇主的工资税。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  詹乐霞表示，绝不会容忍那些
+  <span href="https://www.secretchina.com/news/gb/tag/偷税" target="_blank">
+   偷税
+  </span>
+  漏税、让别人来买单的人，而“食品世界超市”及其所有者参与了公然的、数百万元的骗局，欺骗纳税人，“这起案件应该给所有税务骗子一个明确的警告，他们欺骗同胞的企图将会被曝光，且终将得到惩罚。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -139,7 +134,7 @@
  </center>
  <p>
   <strong>
-   助理检察官担心 唐娟保释后会潜逃
+   举报人可获141万奖金
   </strong>
  </p>
  <center>
@@ -155,7 +150,7 @@
   </div>
  </center>
  <p>
-  不过，助理检察官海科・科波拉（Heiko Coppola）却担心被保释在外的唐娟，随时都有潜逃的可能。他提出一项动议，要求另一名法官推翻纽曼的命令，以将唐娟重新送回监狱，理由是她一旦获释恐怕会潜逃。
+  该案依纽约反虚假申报法（New York False Claims Act，FCA）提起的诉讼进行和解。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -170,11 +165,37 @@
   </div>
  </center>
  <p>
-  科波拉表示：“由于双方（唐和崔）之间没有关系，如果唐逃离美国，对她来说绝对不会有什么损失。崔先生及其家人承担了唐逃跑的全部风险。”、“美国与
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
-  </span>
-  没有引渡条约，因此，如果唐逃走，她不太可能再回来。”
+  FCA的主旨是，鼓励普通民众举报公司及个人，利用不实手法骗取联邦政府的钱。根据FCA的规定，任何民众发现其他个人、公司以欺骗手法，虚报、虚领联邦政府的钱，都可以向司法部举报。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  司法部接到举报后，必须对举报案作出处理。如果司法部认为举报者证据充足，就会接手案件展开调查，并起诉相关公司个人；如果司法部认为举报者证据不够充足，就会让举报者自行决定要如何处理。在这种情况下，举报者有两种选择，要么放弃，要么自行代表联邦政府起诉公司个人，相关诉讼费用由举报者自己负担。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  纽约的FCA尽管与联邦FCA基本相同，但纽约的FCA在一些重要方面有所不同。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -193,9 +214,7 @@
   </ins>
  </center>
  <p>
-  <strong>
-   唐娟身份可疑
-  </strong>
+  根据FCA的规定，如果举报成功，举报者最多可以从罚款及和解款中获得30%的奖励。而纽约FAC允许赔偿三倍的损失，举报者从中获得的奖励更可观。该案的亚裔老板被罚470万，举报者最多可获得罚款的30%（约141万美元）作为奖励。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -210,7 +229,7 @@
   </div>
  </center>
  <p>
-  被捕前，唐娟是加州大学戴维斯分校（UC Davis）客座放射肿瘤学研究人员，她涉嫌隐瞒自己的中共军方背景而获得美国签证。
+  其次，纽约FCA不像联邦FCA那样排除税收欺诈。但是，应该指出的是，只有在被告的“净收入或销售额”为100万美元或以上，且辩护人的损害赔偿额大于35万美元的情况下，纽约FCA才可用于税务欺诈。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -225,7 +244,7 @@
   </div>
  </center>
  <p>
-  美国官员称，联邦调查局（FBI）特工已经发现足够证据，表明她与中共空军和中共有联系，而她在申请签证时隐瞒了这一点。
+  第三，纽约FCA包含十年的时效规定，而联邦FCA有6年的时效规定。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -240,7 +259,22 @@
   </div>
  </center>
  <p>
-  FBI特工在唐娟住所寻获大量其身着军装的照片。还找到一段录像，从中可以看到，一身军装的唐娟在行了一个军礼后，开始演讲。“这段录像是在唐以J-1签证进入美国几天之前录制的。”科波拉在动议中写道。
+  第四，如果政府拒绝干预，纽约FCA允许举报人和他/她的公私共分罚款（qui tam）律师秘密撤回其案件。根据联邦FCA，一旦政府拒绝干预且案件已经解封，举报人不可以在密封情况下撤回其案件。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  第五，纽约的公私共分罚款（qui tam）律师应注意，纽约FCA中的反报复保护措施比联邦FCA中的保护措施更强大。纽约FCA的反报复保护措施覆盖现任和前任员工，代理商和承包商，以及个人不必提交“告发人诉讼”就可以予以保护。纽约FCA还包含“反黑名单”规定。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -272,7 +306,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -304,13 +338,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/946239.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/946239.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/946239.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/16/946239.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/955271.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/955271.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/955271.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/10/955271.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p3/946239.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p3/955271.md' width='0px' height='0px'/>
